test/good/classes/print06.px

class Test def
    func toString() def
        return "test"

print Test()
