test/bad/classes/constructor02.px

class Test def
    constructor() def
        skip

Test(3)
